--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
+
     <main id="principal">
+        <div id="inicio" onclick="abrir()"></div>
+
         <div id="nomes">
             <h1>GENJI</h1>
             <h2><iconify-icon icon="emojione-v1:flag-for-japan"></iconify-icon>Japão, Hanamura</h2>
@@ -21,8 +24,9 @@
         </div>
     </main>
     <div id="frase">
-<div id="retangulo1" class="retangulo"></div>
-<div id="retangulo2" class="retangulo"></div>
+        <div id="retangulo1" class="retangulo"></div>
+        <div id="trapezio"></div>
+        <div id="retangulo2" class="retangulo"></div>
     </div>
 
 
