--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     </main>
     <div id="frase">
         <div id="retangulo1" class="retangulo"></div>
-        <div id="trapezio"></div>
+        <div id="trapezio">
+            <h2 id="lamina">“a lÂmina mais afiada é <br> aquela que não se vê”</h2>
+            <p id="negocio">Dentro do jogo Overwatch, Genji é um personagem da classe de ataque. <br> Ele é um ágil ninja cibernético com habilidades acrobáticas e letais. <br> Seu papel principal é o de um flanqueador e assassino de curta distância.</p>
+        </div>
         <div id="retangulo2" class="retangulo"></div>
     </div>
 
