--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 
     <div id="minhaDiv">
-        <div id="botao2"></div>
+        <div id="botao2" onclick="abrir()"></div>
+        <img id="over" src="imagem/over.png" alt="">
     </div>
     <main id="principal">
         <div id="botao" onclick="abrir()"></div>
@@ -36,6 +37,11 @@
         <div id="retangulo2" class="retangulo"></div>
     </div>
 
+    <div id="carrosel">
+
+        <div id="habili"><h1>habilidades</h1></div>
+
+    </div>
 
 
 
