--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
 
 <body>
 
-    <div id="minhaDiv">
-        <div id="botao2" onclick="abrir()"></div>
-        <img id="over" src="imagem/over.png" alt="">
+    <div id="minhaDiv" style="display: none;">
+        <div id="logos">
+            <div id="botao2" onclick="abrir()"></div>
+            <img id="over" src="imagem/over.png" alt="">
+        </div>
+        <div id="hub">
+            <h3 class="hubs">Voltar ao inicio</h3>
+            <h3 class="hubs">Conheça a historia do jogo</h3>
+            <h3 class="hubs">Conheça os mapas</h3>
+            <h3 class="hubs">Adquira o jogo</h3>
+        </div>
     </div>
     <main id="principal">
         <div id="botao" onclick="abrir()"></div>
-        
+
 
         <div id="nomes">
             <h1>GENJI</h1>
@@ -32,14 +40,18 @@
         <div id="retangulo1" class="retangulo"></div>
         <div id="trapezio">
             <h2 id="lamina">“a lÂmina mais afiada é <br> aquela que não se vê”</h2>
-            <p id="negocio">Dentro do jogo Overwatch, Genji é um personagem da classe de ataque. <br> Ele é um ágil ninja cibernético com habilidades acrobáticas e letais. <br> Seu papel principal é o de um flanqueador e assassino de curta distância.</p>
+            <p id="negocio">Dentro do jogo Overwatch, Genji é um personagem da classe de ataque. <br> Ele é um ágil
+                ninja cibernético com habilidades acrobáticas e letais. <br> Seu papel principal é o de um flanqueador e
+                assassino de curta distância.</p>
         </div>
         <div id="retangulo2" class="retangulo"></div>
     </div>
 
     <div id="carrosel">
 
-        <div id="habili"><h1>habilidades</h1></div>
+        <div id="habili">
+            <h1>habilidades</h1>
+        </div>
 
     </div>
 
