--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
 
+    <!-- header -->
     <div id="minhaDiv" style="display: none;">
         <div id="logos">
             <div id="botao2" onclick="abrir()"></div>
@@ -23,6 +24,8 @@
             <h3 class="hubs">Adquira o jogo</h3>
         </div>
     </div>
+    <!-- header -->
+    <!-- primeira imagem -->
     <main id="principal">
         <div id="botao" onclick="abrir()"></div>
 
@@ -36,6 +39,10 @@
             <img id="genji" src="imagem/genji.png" alt="">
         </div>
     </main>
+
+    <!-- primeira imagem -->
+
+    <!-- carrosel automatico -->
     <div id="frase">
         <div id="retangulo1" class="retangulo"></div>
         <div id="trapezio">
@@ -46,7 +53,9 @@
         </div>
         <div id="retangulo2" class="retangulo"></div>
     </div>
+<!-- carrosel automatico -->
 
+<!-- habilidades -->
     <div id="carrosel">
 
         <div id="habili">
@@ -54,7 +63,7 @@
         </div>
 
     </div>
-
+<!-- habilidades -->
 
 
 
