--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 
         <div id="habili">
             <h1>habilidades</h1>
+            <div id="habilidades-caro">
+                <div class="poder" id="poder-desviar"></div>
+                <div class="poder" id="poder-ult"></div>
+                <div class="poder" id="poder-shuriken"></div>
+            </div>
         </div>
 
     </div>
