--- a/index.html
+++ b/index.html
@@ -53,21 +53,23 @@
         </div>
         <div id="retangulo2" class="retangulo"></div>
     </div>
-<!-- carrosel automatico -->
+    <!-- carrosel automatico -->
 
-<!-- habilidades -->
+    <!-- habilidades -->
     <div id="carrosel">
 
         <div id="habili">
             <h1>habilidades</h1>
         </div>
- <div id="habilidades-caro">
-                <div class="poder" id="poder-desviar"></div>
-                <div class="poder" id="poder-ult"></div>
-                <div class="poder" id="poder-shuriken"></div>
+        <div id="habilidades-caro">
+            <div class="poder" id="poder-desviar"></div>
+            <div class="poder" id="poder-ult">
+                <div id="img-ult"></div>
             </div>
+            <div class="poder" id="poder-shuriken"></div>
+        </div>
     </div>
-<!-- habilidades -->
+    <!-- habilidades -->
 
 
 
