--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <div id="habili">
             <h1>habilidades</h1>
         </div>
-        <div id="habilidades-caro">
+        <div class="habilidades-caro">
+            <div id="antes"><</div>
             <div class="poder" id="poder-desviar"></div>
-            <div class="poder" id="poder-ult">
-                <div id="img-ult"></div>
-            </div>
+            <div class="poder" id="poder-ult"></div>
             <div class="poder" id="poder-shuriken"></div>
+            <div id="proximo">></div>
         </div>
     </div>
     <!-- habilidades -->
