--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     </div>
     <!-- habilidades -->
 
+    <!-- desenhos -->
+    <div id="geral">
+        <div id="canto"></div>
+    </div>
 
 
 
