--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         <div id="retangulo1" class="retangulo"></div>
         <div id="trapezio">
             <h2 id="lamina">“a lÂmina mais afiada é <br> aquela que não se vê”</h2>
-            <p id="negocio">Dentro do jogo Overwatch, Genji é um personagem da classe de ataque. <br> Ele é um ágil
-                ninja cibernético com habilidades acrobáticas e letais. <br> Seu papel principal é o de um flanqueador e
-                assassino de curta distância.</p>
+            <p id="negocio">
+                <span class="span">Dentro do jogo Overwatch, Genji é um personagem da <br> classe de ataque.</span>
+                <span class="span">Ele é um ágil ninja cibernético com <br> habilidades acrobáticas e letais.</span>
+                <span class="span">Seu papel principal é o de <br> um flanqueador e assassino de curta distância</span>
         </div>
         <div id="retangulo2" class="retangulo"></div>
     </div>
@@ -73,7 +74,13 @@
 
     <!-- desenhos -->
     <div id="geral">
-        <div id="canto"></div>
+        <div id="canto">
+            <div id="status"><h3>Desenhe seus personagens favoritos!</h3></div>
+            <canvas id="desenhar"></canvas>
+            <div id="ferramentas">
+                <div id="shapes"></div>
+            </div>
+        </div>
     </div>
 
 
