--- a/index.html
+++ b/index.html
@@ -78,11 +78,24 @@
             <div id="status"><h3>Desenhe seus personagens favoritos!</h3></div>
             <canvas id="desenhar"></canvas>
             <div id="ferramentas">
-                <div id="shapes"></div>
+                <div class="bloco" id="shapes">
+                    <h4>shapes</h4>
+                    <div class="formas" id="quadrado"></div>
+                    <div class="formas" id="bola"></div>
+                    <div class="formas" id="triangulo"></div>
+                </div>
+                <div class="bloco" id="options"></div>
+                <div class="bloco" id="colors"></div>
             </div>
         </div>
     </div>
+<!-- fim desenhos -->
 
+<!-- footer -->
+<footer id="footer">
+    <div id="btn"></div>
+    <div id="video"></div>
+</footer>
 
 
     <script src="main.js"></script>
