--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
             <canvas id="desenhar"></canvas>
             <div id="ferramentas">
                 <div class="bloco" id="shapes">
-                    <h4>shapes</h4>
+                    <div id="titulo">
+                        <h4>shapes</h4>
+                    </div>
                     <div class="formas" id="quadrado"></div>
                     <div class="formas" id="bola"></div>
                     <div class="formas" id="triangulo"></div>
