--- a/index.html
+++ b/index.html
@@ -86,8 +86,25 @@
                     <div class="formas" id="bola"></div>
                     <div class="formas" id="triangulo"></div>
                 </div>
-                <div class="bloco" id="options"></div>
-                <div class="bloco" id="colors"></div>
+                <div class="bloco" id="options">
+                    <div id="titulo">
+                        <h4>Options</h4>
+                    </div>
+                    <div id="aparato">
+                        <iconify-icon icon="mdi:pencil" width="60" height="60"></iconify-icon>
+                    </div>
+                    <div id="aparato">
+                        <iconify-icon icon="fad:eraser" width="60" height="60"></iconify-icon>
+                    </div>
+                </div>
+                <div class="bloco" id="colors">
+                    <div id="titulo">
+                        <h4>Colors/Width</h4>
+                    </div>
+                    <input type="color">
+                    <input type="number" min="1" max="20"
+                    id="largura">
+                </div>
             </div>
         </div>
     </div>
