--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div id="geral">
         <div id="canto">
             <div id="status"><h3>Desenhe seus personagens favoritos!</h3></div>
-            <canvas id="desenhar"></canvas>
+            <canvas id="desenhar" width="800" height="520px"></canvas>
             <div id="ferramentas">
                 <div class="bloco" id="shapes">
                     <div id="titulo">
