--- a/index.html
+++ b/index.html
@@ -78,14 +78,6 @@
             <div id="status"><h3>Desenhe seus personagens favoritos!</h3></div>
             <canvas id="desenhar" width="800" height="520px"></canvas>
             <div id="ferramentas">
-                <div class="bloco" id="shapes">
-                    <div id="titulo">
-                        <h4>shapes</h4>
-                    </div>
-                    <div class="formas" id="quadrado"></div>
-                    <div class="formas" id="bola"></div>
-                    <div class="formas" id="triangulo"></div>
-                </div>
                 <div class="bloco" id="options">
                     <div id="titulo">
                         <h4>Options</h4>
@@ -101,7 +93,7 @@
                     <div id="titulo">
                         <h4>Colors/Width</h4>
                     </div>
-                    <input type="color">
+                    <input type="color" id="inputColor">
                     <input type="number" min="1" max="20"
                     id="largura">
                 </div>
