--- a/index.html
+++ b/index.html
@@ -63,54 +63,46 @@
             <h1>habilidades</h1>
         </div>
         <div class="habilidades-caro">
-            <div id="antes"><</div>
-            <div class="poder" id="poder-desviar"></div>
-            <div class="poder" id="poder-ult"></div>
-            <div class="poder" id="poder-shuriken"></div>
-            <div id="proximo">></div>
+            <div id="antes">
+                <</div>
+                    <div class="poder" id="poder-desviar"></div>
+                    <div class="poder" id="poder-ult"></div>
+                    <div class="poder" id="poder-shuriken"></div>
+                    <div id="proximo">></div>
+            </div>
         </div>
-    </div>
-    <!-- habilidades -->
+        <!-- habilidades -->
 
-    <!-- desenhos -->
-    <div id="geral">
-        <div id="canto">
-            <div id="status"><h3>Desenhe seus personagens favoritos!</h3></div>
-            <canvas id="desenhar" width="800" height="520px"></canvas>
-            <div id="ferramentas">
-                <div class="bloco" id="options">
-                    <div id="titulo">
-                        <h4>Options</h4>
-                    </div>
-                    <div id="aparato">
-                        <iconify-icon icon="mdi:pencil" width="60" height="60"></iconify-icon>
-                    </div>
-                    <div id="aparato">
-                        <iconify-icon icon="fad:eraser" width="60" height="60"></iconify-icon>
-                    </div>
+        <!-- desenhos -->
+        <div id="geral">
+            <div id="canto">
+                <div id="status">
+                    <h3>Desenhe seus personagens favoritos! <br>
+                        SEM USAR BORRACHA!</h3>
                 </div>
-                <div class="bloco" id="colors">
-                    <div id="titulo">
-                        <h4>Colors/Width</h4>
+                <canvas id="desenhar" width="800" height="520px"></canvas>
+                <div id="ferramentas">
+                    <div class="bloco" id="colors">
+                        <div id="titulo">
+                            <h4>Colors/Width</h4>
+                        </div>
+                        <input type="color">
+                        <input type="number" min="1" max="20" id="largura">
                     </div>
-                    <input type="color" id="inputColor">
-                    <input type="number" min="1" max="20"
-                    id="largura">
                 </div>
             </div>
         </div>
-    </div>
-<!-- fim desenhos -->
+        <!-- fim desenhos -->
 
-<!-- footer -->
-<footer id="footer">
-    <div id="btn"></div>
-    <div id="video"></div>
-</footer>
+        <!-- footer -->
+        <footer id="footer">
+            <div id="btn"></div>
+            <div id="video"></div>
+        </footer>
 
 
-    <script src="main.js"></script>
-    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+        <script src="main.js"></script>
+        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 
 </html>
