--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div id="canto">
                 <div id="status">
                     <h3>Desenhe seus personagens favoritos! <br>
-                        SEM USAR BORRACHA!</h3>
+                        SEM USAR BORRACHA!!!!</h3>
                 </div>
                 <canvas id="desenhar" width="800" height="520px"></canvas>
                 <div id="ferramentas">
