--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@
             <h1>habilidades</h1>
         </div>
         <div class="habilidades-caro">
-            <div id="antes">
-                <</div>
+            <div id="antes"><</div>
                     <div class="poder" id="poder-desviar"></div>
-                    <div class="poder" id="poder-ult"></div>
+                    <div class="poder" id="poder-ult">
+                        <div id="descricao_ult">
+                            
+                        </div>
+                    </div>
                     <div class="poder" id="poder-shuriken"></div>
                     <div id="proximo">></div>
             </div>
@@ -96,8 +99,7 @@
 
         <!-- footer -->
         <footer id="footer">
-            <div id="btn"></div>
-            <div id="video"></div>
+            <div id="img__footer"></div>
         </footer>
 
 
