--- a/index.html
+++ b/index.html
@@ -64,10 +64,23 @@
         </div>
         <div class="habilidades-caro">
             <div id="antes"><</div>
-                    <div class="poder" id="poder-desviar"></div>
+                    <div class="poder" id="poder-desviar">
+                        <div id="descricao_desviar">
+                            <h2>Desviar</h2>
+                            <p>Atalho padrão: E</p>
+                            <p>Dano: 50 (45 em armaduras)</p>
+                            <p>Recarga: 8 segundos</p>
+                            <h4>Genji avança para frente, golpeando com sua katana e passando por inimigos em seu caminho. Se Genji eliminar um alvo com essa habilidade, ele pode usá-la de novo instantaneamente.</h4>
+                        </div>
+                    </div>
                     <div class="poder" id="poder-ult">
                         <div id="descricao_ult">
-                            
+                            <h2>Lamina do dragao</h2>
+                            <p>Atalho padrão : Q</p>
+                            <p>Duração: 6 seg</p>
+                            <p>Velocidade de ataque: 1 ataque a cada 0.9 segundos (aproximadamente)</p>
+                            <p>Dano: 120 por ataque</p>
+                            <h4>Genji brande sua katana por um breve período de tempo. Até embainhar sua espada, Genji consegue acertar golpes mortais em qualquer alvo ao seu alcance.</h4>
                         </div>
                     </div>
                     <div class="poder" id="poder-shuriken"></div>
