--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
         <!-- fim desenhos -->
 
         <!-- footer -->
-        <footer id="footer">
+        <footer id="footer" >
             <hr id="hr">
-            <div id="img__footer"></div>
+            <div id="img__footer" onclick="voltarParaInicio()"></div>
             <hr id="hr">
         </footer>
 
