--- a/index.html
+++ b/index.html
@@ -64,14 +64,13 @@
             <h1>habilidades</h1>
         </div>
         <div class="habilidades-caro" data-aos="zoom-in">
-            <div id="antes">
-                < </div>
+            <div id="antes"> < </div>
                     <div class="poder" id="poder-desviar">
                         <div id="descricao_desviar">
                             <h2>Desviar</h2>
-                            <p>Atalho padrão: E</p>
-                            <p>Dano: 50 (45 em armaduras)</p>
-                            <p>Recarga: 8 segundos</p>
+                            <p id="pezinho">Atalho padrão: E</p>
+                            <p id="pezinho">Dano: 50 (45 em armaduras)</p>
+                            <p id="pezinho">Recarga: 8 segundos</p>
                             <h4>Genji avança para frente, golpeando com sua katana e passando por inimigos em seu
                                 caminho. Se Genji eliminar um alvo com essa habilidade, ele pode usá-la de novo
                                 instantaneamente.</h4>
@@ -80,10 +79,10 @@
                     <div class="poder" id="poder-ult">
                         <div id="descricao_ult">
                             <h2>Lamina do dragao</h2>
-                            <p>Atalho padrão : Q</p>
-                            <p>Duração: 6 seg</p>
-                            <p>Velocidade de ataque: 1 ataque a cada 0.9 segundos (aproximadamente)</p>
-                            <p>Dano: 120 por ataque</p>
+                            <p id="pezinho">Atalho padrão : Q</p>
+                            <p id="pezinho">Duração: 6 seg</p>
+                            <p id="pezinho">Velocidade de ataque: 1 ataque a cada 0.9 segundos (aproximadamente)</p>
+                            <p id="pezinho">Dano: 120 por ataque</p>
                             <h4>Genji brande sua katana por um breve período de tempo. Até embainhar sua espada, Genji
                                 consegue acertar golpes mortais em qualquer alvo ao seu alcance.</h4>
                         </div>
@@ -91,10 +90,10 @@
                     <div class="poder" id="poder-shuriken">
                         <div id="descricao_shuriken">
                             <h2>Shuriken</h2>
-                            <p>Munição: 24 (8×3 shurikens)</p>
-                            <p>Cadência de tiro: Primário – 3 shurikens por segundo | Secundário 3 shurikens por 0,7 segundos (valores aproximados)</p>
-                            <p>Dano: 28 por shuriken</p>
-                            <p>Recarga: 1,5 segundos</p>
+                            <p id="pezinho">Munição: 24 (8×3 shurikens)</p>
+                            <p id="pezinho">Cadência de tiro: Primário – 3 shurikens por segundo. Secundário 3 shurikens por 0,7 segundos (valores aproximados)</p>
+                            <p id="pezinho">Dano: 28 por shuriken</p>
+                            <p id="pezinho">Recarga: 1,5 segundos</p>
                             <h4>Genji solta três estrelas ninjas mortais em sucessão rápida. Como alternativa, ele pode jogar três shurikens em uma abrangência maior.</h4>
                         </div>
                     </div>
@@ -136,7 +135,7 @@
         <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
-            AOS.init();
+            AOS.init(2);
         </script>
 </body>
 
